--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,9 +1,10 @@
 {
   "dependencies": {
     "com.unity.ide.vscode": "1.2.5",
-    "com.unity.render-pipelines.universal": "14.0.8",
+    "com.unity.render-pipelines.universal": "16.0.5",
     "com.unity.toolchain.linux-x86_64": "2.0.6",
-    "com.unity.ugui": "1.0.0",
+    "com.unity.ugui": "2.0.0",
+    "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.imageconversion": "1.0.0",
     "com.unity.modules.imgui": "1.0.0",
     "com.unity.modules.jsonserialize": "1.0.0",
